Done Event List (know db alive events)
- Todo
  - fix camera permission request Dialog
  - replace MainActivity with other login or something
  - make eventMapActivity
    acquire DB to know each event points

Signed-off-by: how8570 <joe13512345@gmail.com>

--- a/app/src/main/res/layout/activity_event_map.xml
+++ b/app/src/main/res/layout/activity_event_map.xml
@@ -14,9 +14,7 @@
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
         android:minHeight="?attr/actionBarSize"
-        app:titleTextColor="@android:color/white">
-
-    </androidx.appcompat.widget.Toolbar>
+        app:titleTextColor="@android:color/white" />
 
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
